parser/bison.output
Nonterminals useless in grammar

   select
   select_combo
   select_statement
   opt_distinct
   opt_group_by_clause
   opt_order_by_clause
   opt_asc_desc
   expression_list
   expression
   expr_plus
   mulexp
   oprt
   primary
   term
   opt_alias
   function_name
   table
   table_ref


Terminals unused in grammar

   SELECT
   ORDER
   GROUP
   CHECK
   BY
   AS
   DISTINCT
   ALL
   ASC
   EXCEPT
   INTERSECT
   UNION
   MAX
   MIN
   SUM
   AVG
   COUNT
   CONCAT
   PLUS
   MINUS
   MULTIPLY
   DIVIDE
   CONTAC
   '*'


Rules useless in grammar

   76 command: select

   77 select: select_statement
   78       | select_statement select_combo select

   79 select_combo: UNION
   80             | INTERSECT
   81             | EXCEPT

   82 select_statement: SELECT opt_distinct expression_list FROM table opt_where_condition opt_order_by_clause opt_group_by_clause
   83                 | SELECT opt_distinct expression_list FROM table opt_where_condition opt_group_by_clause opt_order_by_clause
   84                 | '(' select_statement ')'

   85 opt_distinct: DISTINCT
   86             | ALL
   87             | %empty

   88 opt_group_by_clause: GROUP BY relattr

   89 opt_order_by_clause: ORDER BY relattr opt_asc_desc

   90 opt_asc_desc: DESC
   91             | ASC
   92             | %empty

   93 in_statement: IN '(' select ')'

   94 expression_list: expression
   95                | expression_list ',' expression
   96                | '*'

   97 expression: expr_plus opt_alias

   98 expr_plus: expr_plus oprt mulexp
   99          | mulexp

  100 mulexp: mulexp oprt primary
  101       | primary

  102 oprt: PLUS
  103     | MINUS
  104     | MULTIPLY
  105     | DIVIDE
  106     | CONCAT

  107 primary: '(' expr_plus ')'
  108        | MINUS primary
  109        | term

  110 term: TOKEN_NULL
  111     | column_name
  112     | table_name '.' column_name
  113     | function_name '(' column_name ')'
  114     | function_name '(' table_name '.' column_name ')'
  115     | function_name '(' '*' ')'

  116 opt_alias: AS IDENTIFIER
  117          | IDENTIFIER
  118          | %empty

  119 function_name: COUNT
  120              | SUM
  121              | AVG
  122              | MIN
  123              | MAX

  124 table: table_ref ',' table

  125 table_ref: table_name opt_alias


State 64 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: command ';'
    2      | T_SHELL_CMD
    3      | T_EOF

    4 command: create
    5        | insert
    6        | delete
    7        | drop
    8        | update
    9        | use
   10        | show
   11        | desc

   12 use: USE database_name

   13 desc: DESC table_name

   14 show: SHOW TABLES
   15     | SHOW TABLE table_name

   16 update: UPDATE IDENTIFIER SET relattr EQU relattr_or_value opt_where_condition

   17 drop: drop_table
   18     | drop_index
   19     | drop_database

   20 create: create_table
   21       | create_index
   22       | create_database

   23 create_database: CREATE DATABASE database_name

   24 drop_database: DROP DATABASE database_name

   25 drop_table: DROP TABLE table_name

   26 database_name: IDENTIFIER

   27 create_index: CREATE INDEX table_name '(' column_name ')'

   28 drop_index: DROP INDEX table_name '(' column_name ')'

   29 create_table: CREATE TABLE table_name '(' column_dec_list opt_key_dec_list ')'

   30 column_dec_list: column_dec
   31                | column_dec ',' column_dec_list

   32 column_dec: column_name column_type '(' INT_LITERAL ')' can_null

   33 can_null: NOT TOKEN_NULL
   34         | %empty

   35 column_type: INT
   36            | FLOAT
   37            | CHAR
   38            | VARCHAR

   39 opt_key_dec_list: ',' key_dec_list
   40                 | %empty

   41 key_dec_list: key_dec
   42             | key_dec ',' key_dec_list

   43 key_dec: PRIMARY KEY '(' column_name ')'

   44 opt_where_condition: where_condition
   45                    | %empty

   46 where_condition: WHERE condition

   47 condition: bool_term
   48          | bool_term bool_op condition

   49 bool_term: relattr comp_op relattr_or_value
   50          | relattr in_statement

   51 relattr_or_value: relattr
   52                 | literal_value

   53 relattr: IDENTIFIER '.' IDENTIFIER
   54        | IDENTIFIER '.' TOKEN_NULL
   55        | IDENTIFIER

   56 in_statement: IN '(' values_list ')'

   57 bool_op: AND
   58        | OR

   59 comp_op: EQU
   60        | NEQ
   61        | LSS
   62        | GTR
   63        | LEQ
   64        | GEQ
   65        | IS
   66        | LIKE

   67 column_name: IDENTIFIER

   68 table_name: IDENTIFIER

   69 insert: INSERT INTO table_name VALUES '(' values_list ')'

   70 values_list: literal_value
   71            | literal_value ',' values_list

   72 literal_value: INT_LITERAL
   73              | FLOAT_LITERAL
   74              | STRING_LITERAL

   75 delete: DELETE FROM table_name where_condition


Terminals, with rules where they appear

$end (0) 0
'(' (40) 27 28 29 32 43 56 69
')' (41) 27 28 29 32 43 56 69
'*' (42)
',' (44) 31 39 42 71
'.' (46) 53 54
';' (59) 1
error (256)
CREATE (258) 23 27 29
DROP (259) 24 25 28
USE (260) 12
SHOW (261) 14 15
SELECT (262)
DESC (263) 13
INSERT (264) 69
DELETE (265) 75
UPDATE (266) 16
TABLES (267) 14
DATABASE (268) 23 24
TABLE (269) 15 25 29
INDEX (270) 27 28
SET (271) 16
WHERE (272) 46
FROM (273) 75
ORDER (274)
GROUP (275)
CHECK (276)
BY (277)
INTO (278) 69
VALUES (279) 69
AS (280)
DISTINCT (281)
ALL (282)
PRIMARY (283) 43
KEY (284) 43
ASC (285)
IN (286) 56
AND (287) 57
OR (288) 58
EXCEPT (289)
INTERSECT (290)
UNION (291)
NOT (292) 33
TOKEN_NULL (293) 33 54
MAX (294)
MIN (295)
SUM (296)
AVG (297)
COUNT (298)
EQU (299) 16 59
NEQ (300) 60
LSS (301) 61
GTR (302) 62
LEQ (303) 63
GEQ (304) 64
CONCAT (305)
IS (306) 65
LIKE (307) 66
T_EOF (308) 3
PLUS (309)
MINUS (310)
MULTIPLY (311)
DIVIDE (312)
INT (313) 35
CHAR (314) 37
FLOAT (315) 36
VARCHAR (316) 38
INT_LITERAL (317) 32 72
FLOAT_LITERAL (318) 73
STRING_LITERAL (319) 74
IDENTIFIER (320) 16 26 53 54 55 67 68
T_SHELL_CMD (321) 2
CONTAC (322)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
start (75)
    on left: 1 2 3, on right: 0
command (76)
    on left: 4 5 6 7 8 9 10 11, on right: 1
use (77)
    on left: 12, on right: 9
desc (78)
    on left: 13, on right: 11
show (79)
    on left: 14 15, on right: 10
update (80)
    on left: 16, on right: 8
drop (81)
    on left: 17 18 19, on right: 7
create (82)
    on left: 20 21 22, on right: 4
create_database (83)
    on left: 23, on right: 22
drop_database (84)
    on left: 24, on right: 19
drop_table (85)
    on left: 25, on right: 17
database_name (86)
    on left: 26, on right: 12 23 24
create_index (87)
    on left: 27, on right: 21
drop_index (88)
    on left: 28, on right: 18
create_table (89)
    on left: 29, on right: 20
column_dec_list (90)
    on left: 30 31, on right: 29 31
column_dec (91)
    on left: 32, on right: 30 31
can_null (92)
    on left: 33 34, on right: 32
column_type (93)
    on left: 35 36 37 38, on right: 32
opt_key_dec_list (94)
    on left: 39 40, on right: 29
key_dec_list (95)
    on left: 41 42, on right: 39 42
key_dec (96)
    on left: 43, on right: 41 42
opt_where_condition (97)
    on left: 44 45, on right: 16
where_condition (98)
    on left: 46, on right: 44 75
condition (99)
    on left: 47 48, on right: 46 48
bool_term (100)
    on left: 49 50, on right: 47 48
relattr_or_value (101)
    on left: 51 52, on right: 16 49
relattr (102)
    on left: 53 54 55, on right: 16 49 50 51
in_statement (103)
    on left: 56, on right: 50
bool_op (104)
    on left: 57 58, on right: 48
comp_op (105)
    on left: 59 60 61 62 63 64 65 66, on right: 49
column_name (106)
    on left: 67, on right: 27 28 32 43
table_name (107)
    on left: 68, on right: 13 15 25 27 28 29 69 75
insert (108)
    on left: 69, on right: 5
values_list (109)
    on left: 70 71, on right: 56 69 71
literal_value (110)
    on left: 72 73 74, on right: 52 70 71
delete (111)
    on left: 75, on right: 6


State 0

    0 $accept: . start $end

    CREATE       shift, and go to state 1
    DROP         shift, and go to state 2
    USE          shift, and go to state 3
    SHOW         shift, and go to state 4
    DESC         shift, and go to state 5
    INSERT       shift, and go to state 6
    DELETE       shift, and go to state 7
    UPDATE       shift, and go to state 8
    T_EOF        shift, and go to state 9
    T_SHELL_CMD  shift, and go to state 10

    start            go to state 11
    command          go to state 12
    use              go to state 13
    desc             go to state 14
    show             go to state 15
    update           go to state 16
    drop             go to state 17
    create           go to state 18
    create_database  go to state 19
    drop_database    go to state 20
    drop_table       go to state 21
    create_index     go to state 22
    drop_index       go to state 23
    create_table     go to state 24
    insert           go to state 25
    delete           go to state 26


State 1

   23 create_database: CREATE . DATABASE database_name
   27 create_index: CREATE . INDEX table_name '(' column_name ')'
   29 create_table: CREATE . TABLE table_name '(' column_dec_list opt_key_dec_list ')'

    DATABASE  shift, and go to state 27
    TABLE     shift, and go to state 28
    INDEX     shift, and go to state 29


State 2

   24 drop_database: DROP . DATABASE database_name
   25 drop_table: DROP . TABLE table_name
   28 drop_index: DROP . INDEX table_name '(' column_name ')'

    DATABASE  shift, and go to state 30
    TABLE     shift, and go to state 31
    INDEX     shift, and go to state 32


State 3

   12 use: USE . database_name

    IDENTIFIER  shift, and go to state 33

    database_name  go to state 34


State 4

   14 show: SHOW . TABLES
   15     | SHOW . TABLE table_name

    TABLES  shift, and go to state 35
    TABLE   shift, and go to state 36


State 5

   13 desc: DESC . table_name

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 38


State 6

   69 insert: INSERT . INTO table_name VALUES '(' values_list ')'

    INTO  shift, and go to state 39


State 7

   75 delete: DELETE . FROM table_name where_condition

    FROM  shift, and go to state 40


State 8

   16 update: UPDATE . IDENTIFIER SET relattr EQU relattr_or_value opt_where_condition

    IDENTIFIER  shift, and go to state 41


State 9

    3 start: T_EOF .

    $default  reduce using rule 3 (start)


State 10

    2 start: T_SHELL_CMD .

    $default  reduce using rule 2 (start)


State 11

    0 $accept: start . $end

    $end  shift, and go to state 42


State 12

    1 start: command . ';'

    ';'  shift, and go to state 43


State 13

    9 command: use .

    $default  reduce using rule 9 (command)


State 14

   11 command: desc .

    $default  reduce using rule 11 (command)


State 15

   10 command: show .

    $default  reduce using rule 10 (command)


State 16

    8 command: update .

    $default  reduce using rule 8 (command)


State 17

    7 command: drop .

    $default  reduce using rule 7 (command)


State 18

    4 command: create .

    $default  reduce using rule 4 (command)


State 19

   22 create: create_database .

    $default  reduce using rule 22 (create)


State 20

   19 drop: drop_database .

    $default  reduce using rule 19 (drop)


State 21

   17 drop: drop_table .

    $default  reduce using rule 17 (drop)


State 22

   21 create: create_index .

    $default  reduce using rule 21 (create)


State 23

   18 drop: drop_index .

    $default  reduce using rule 18 (drop)


State 24

   20 create: create_table .

    $default  reduce using rule 20 (create)


State 25

    5 command: insert .

    $default  reduce using rule 5 (command)


State 26

    6 command: delete .

    $default  reduce using rule 6 (command)


State 27

   23 create_database: CREATE DATABASE . database_name

    IDENTIFIER  shift, and go to state 33

    database_name  go to state 44


State 28

   29 create_table: CREATE TABLE . table_name '(' column_dec_list opt_key_dec_list ')'

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 45


State 29

   27 create_index: CREATE INDEX . table_name '(' column_name ')'

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 46


State 30

   24 drop_database: DROP DATABASE . database_name

    IDENTIFIER  shift, and go to state 33

    database_name  go to state 47


State 31

   25 drop_table: DROP TABLE . table_name

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 48


State 32

   28 drop_index: DROP INDEX . table_name '(' column_name ')'

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 49


State 33

   26 database_name: IDENTIFIER .

    $default  reduce using rule 26 (database_name)


State 34

   12 use: USE database_name .

    $default  reduce using rule 12 (use)


State 35

   14 show: SHOW TABLES .

    $default  reduce using rule 14 (show)


State 36

   15 show: SHOW TABLE . table_name

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 50


State 37

   68 table_name: IDENTIFIER .

    $default  reduce using rule 68 (table_name)


State 38

   13 desc: DESC table_name .

    $default  reduce using rule 13 (desc)


State 39

   69 insert: INSERT INTO . table_name VALUES '(' values_list ')'

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 51


State 40

   75 delete: DELETE FROM . table_name where_condition

    IDENTIFIER  shift, and go to state 37

    table_name  go to state 52


State 41

   16 update: UPDATE IDENTIFIER . SET relattr EQU relattr_or_value opt_where_condition

    SET  shift, and go to state 53


State 42

    0 $accept: start $end .

    $default  accept


State 43

    1 start: command ';' .

    $default  reduce using rule 1 (start)


State 44

   23 create_database: CREATE DATABASE database_name .

    $default  reduce using rule 23 (create_database)


State 45

   29 create_table: CREATE TABLE table_name . '(' column_dec_list opt_key_dec_list ')'

    '('  shift, and go to state 54


State 46

   27 create_index: CREATE INDEX table_name . '(' column_name ')'

    '('  shift, and go to state 55


State 47

   24 drop_database: DROP DATABASE database_name .

    $default  reduce using rule 24 (drop_database)


State 48

   25 drop_table: DROP TABLE table_name .

    $default  reduce using rule 25 (drop_table)


State 49

   28 drop_index: DROP INDEX table_name . '(' column_name ')'

    '('  shift, and go to state 56


State 50

   15 show: SHOW TABLE table_name .

    $default  reduce using rule 15 (show)


State 51

   69 insert: INSERT INTO table_name . VALUES '(' values_list ')'

    VALUES  shift, and go to state 57


State 52

   75 delete: DELETE FROM table_name . where_condition

    WHERE  shift, and go to state 58

    where_condition  go to state 59


State 53

   16 update: UPDATE IDENTIFIER SET . relattr EQU relattr_or_value opt_where_condition

    IDENTIFIER  shift, and go to state 60

    relattr  go to state 61


State 54

   29 create_table: CREATE TABLE table_name '(' . column_dec_list opt_key_dec_list ')'

    IDENTIFIER  shift, and go to state 62

    column_dec_list  go to state 63
    column_dec       go to state 64
    column_name      go to state 65


State 55

   27 create_index: CREATE INDEX table_name '(' . column_name ')'

    IDENTIFIER  shift, and go to state 62

    column_name  go to state 66


State 56

   28 drop_index: DROP INDEX table_name '(' . column_name ')'

    IDENTIFIER  shift, and go to state 62

    column_name  go to state 67


State 57

   69 insert: INSERT INTO table_name VALUES . '(' values_list ')'

    '('  shift, and go to state 68


State 58

   46 where_condition: WHERE . condition

    IDENTIFIER  shift, and go to state 60

    condition  go to state 69
    bool_term  go to state 70
    relattr    go to state 71


State 59

   75 delete: DELETE FROM table_name where_condition .

    $default  reduce using rule 75 (delete)


State 60

   53 relattr: IDENTIFIER . '.' IDENTIFIER
   54        | IDENTIFIER . '.' TOKEN_NULL
   55        | IDENTIFIER .

    '.'  shift, and go to state 72

    $default  reduce using rule 55 (relattr)


State 61

   16 update: UPDATE IDENTIFIER SET relattr . EQU relattr_or_value opt_where_condition

    EQU  shift, and go to state 73


State 62

   67 column_name: IDENTIFIER .

    $default  reduce using rule 67 (column_name)


State 63

   29 create_table: CREATE TABLE table_name '(' column_dec_list . opt_key_dec_list ')'

    ','  shift, and go to state 74

    $default  reduce using rule 40 (opt_key_dec_list)

    opt_key_dec_list  go to state 75


State 64

   30 column_dec_list: column_dec .
   31                | column_dec . ',' column_dec_list

    ','  shift, and go to state 76

    ','       [reduce using rule 30 (column_dec_list)]
    $default  reduce using rule 30 (column_dec_list)


State 65

   32 column_dec: column_name . column_type '(' INT_LITERAL ')' can_null

    INT      shift, and go to state 77
    CHAR     shift, and go to state 78
    FLOAT    shift, and go to state 79
    VARCHAR  shift, and go to state 80

    column_type  go to state 81


State 66

   27 create_index: CREATE INDEX table_name '(' column_name . ')'

    ')'  shift, and go to state 82


State 67

   28 drop_index: DROP INDEX table_name '(' column_name . ')'

    ')'  shift, and go to state 83


State 68

   69 insert: INSERT INTO table_name VALUES '(' . values_list ')'

    INT_LITERAL     shift, and go to state 84
    FLOAT_LITERAL   shift, and go to state 85
    STRING_LITERAL  shift, and go to state 86

    values_list    go to state 87
    literal_value  go to state 88


State 69

   46 where_condition: WHERE condition .

    $default  reduce using rule 46 (where_condition)


State 70

   47 condition: bool_term .
   48          | bool_term . bool_op condition

    AND  shift, and go to state 89
    OR   shift, and go to state 90

    $default  reduce using rule 47 (condition)

    bool_op  go to state 91


State 71

   49 bool_term: relattr . comp_op relattr_or_value
   50          | relattr . in_statement

    IN    shift, and go to state 92
    EQU   shift, and go to state 93
    NEQ   shift, and go to state 94
    LSS   shift, and go to state 95
    GTR   shift, and go to state 96
    LEQ   shift, and go to state 97
    GEQ   shift, and go to state 98
    IS    shift, and go to state 99
    LIKE  shift, and go to state 100

    in_statement  go to state 101
    comp_op       go to state 102


State 72

   53 relattr: IDENTIFIER '.' . IDENTIFIER
   54        | IDENTIFIER '.' . TOKEN_NULL

    TOKEN_NULL  shift, and go to state 103
    IDENTIFIER  shift, and go to state 104


State 73

   16 update: UPDATE IDENTIFIER SET relattr EQU . relattr_or_value opt_where_condition

    INT_LITERAL     shift, and go to state 84
    FLOAT_LITERAL   shift, and go to state 85
    STRING_LITERAL  shift, and go to state 86
    IDENTIFIER      shift, and go to state 60

    relattr_or_value  go to state 105
    relattr           go to state 106
    literal_value     go to state 107


State 74

   39 opt_key_dec_list: ',' . key_dec_list

    PRIMARY  shift, and go to state 108

    key_dec_list  go to state 109
    key_dec       go to state 110


State 75

   29 create_table: CREATE TABLE table_name '(' column_dec_list opt_key_dec_list . ')'

    ')'  shift, and go to state 111


State 76

   31 column_dec_list: column_dec ',' . column_dec_list

    IDENTIFIER  shift, and go to state 62

    column_dec_list  go to state 112
    column_dec       go to state 64
    column_name      go to state 65


State 77
